Update dockerfile by adding fonts support

--- a/src/Web/Web.MVC/Web.MVC/Dockerfile
+++ b/src/Web/Web.MVC/Web.MVC/Dockerfile
@@ -1,4 +1,6 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+RUN apt-get update; apt-get install -y fontconfig
+RUN fc-cache -f -v
 USER app
 WORKDIR /app
 EXPOSE 8080
