Move dnt captcha encryption key to appsettings file

--- a/src/Web/Web.MVC/Web.MVC/appsettings.Development.json
+++ b/src/Web/Web.MVC/Web.MVC/appsettings.Development.json
@@ -10,5 +10,6 @@
     "Protocol": "https",
     "DomainName": "localhost:1213"
   },
-  "Jwt:Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672"
+  "Jwt:Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672",
+  "Captcha:EncryptionKey": "d8a122a8-f84c-49bf-be94-fa97c4e79a8f"
 }
