Add reference to api project

--- a/src/Microservices/Register/tests/RegisterMicroservice.IntegrationTests/RegisterMicroservice.IntegrationTests.csproj
+++ b/src/Microservices/Register/tests/RegisterMicroservice.IntegrationTests/RegisterMicroservice.IntegrationTests.csproj
@@ -24,4 +24,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\RegisterMicroservice.Api\RegisterMicroservice.Api.csproj" />
+  </ItemGroup>
+
 </Project>
