Add yarp settings

--- a/src/Gateway/Gateway.Api/appsettings.Development.json
+++ b/src/Gateway/Gateway.Api/appsettings.Development.json
@@ -4,5 +4,146 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Yarp":
+  {
+    "Routes": {
+      "banhistory-route": {
+        "ClusterId": "banhistory-cluster",
+        "Match": {
+          "Path": "api/BanHistory/{**catch-all}"
+        }
+      },
+      "bookmark-route": {
+        "ClusterId": "bookmark-cluster",
+        "Match": {
+          "Path": "api/Bookmark/{**catch-all}"
+        }
+      },
+      "comment-route": {
+        "ClusterId": "comment-cluster",
+        "Match": {
+          "Path": "api/Comment/{**catch-all}"
+        }
+      },
+      "suggest-comment-route": {
+        "ClusterId": "comment-cluster",
+        "Match": {
+          "Path": "api/SuggestComment/{**catch-all}"
+        }
+      },
+      "discussion-route": {
+        "ClusterId": "discussion-cluster",
+        "Match": {
+          "Path": "api/Discussion/{**catch-all}"
+        }
+      },
+      "suggest-discussion-route": {
+        "ClusterId": "discussion-cluster",
+        "Match": {
+          "Path": "api/SuggestDiscussion/{**catch-all}"
+        }
+      },
+      "auth-route": {
+        "ClusterId": "register-cluster",
+        "Match": {
+          "Path": "api/Auth/{**catch-all}"
+        }
+      },
+      "token-route": {
+        "ClusterId": "register-cluster",
+        "Match": {
+          "Path": "api/Token/{**catch-all}"
+        }
+      },
+      "register-user-route": {
+        "ClusterId": "register-cluster",
+        "Match": {
+          "Path": "api/User/{**catch-all}"
+        }
+      },
+      "report-route": {
+        "ClusterId": "report-cluster",
+        "Match": {
+          "Path": "api/Report/{**catch-all}"
+        }
+      },
+      "topic-route": {
+        "ClusterId": "topic-cluster",
+        "Match": {
+          "Path": "api/Topic/{**catch-all}"
+        }
+      },
+      "suggest-topic-route": {
+        "ClusterId": "topic-cluster",
+        "Match": {
+          "Path": "api/SuggestTopic/{**catch-all}"
+        }
+      },
+      "user-route": {
+        "ClusterId": "user-cluster",
+        "Match": {
+          "Path": "api/profile/User/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "banhistory-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://banhistory-microservice-api:8080"
+          }
+        }
+      },
+      "bookmark-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://bookmark-microservice-api:8080"
+          }
+        }
+      },
+      "register-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://register-microservice-api:8080"
+          }
+        }
+      },
+      "user-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://user-microservice-api:8080"
+          }
+        }
+      },
+      "topic-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://topic-microservice-api:8080"
+          }
+        }
+      },
+      "discussion-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://discussion-microservice-api:8080"
+          }
+        }
+      },
+      "comment-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://comment-microservice-api:8080"
+          }
+        }
+      },
+      "report-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://report-microservice-api:8080"
+          }
+        }
+      }
+    }
   }
 }
