--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -282,6 +282,47 @@ services:
             - 15672:15672
             - 5672:5672
 
+    prometheus:
+      image: prom/prometheus:latest
+      container_name: prometheus
+      ports:
+        - 9090:9090
+      command:
+        - --config.file=/etc/prometheus/prometheus.yml
+      volumes:
+        - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+        - prometheus_data:/prometheus
+
+    grafana:
+      image: grafana/grafana:latest
+      container_name: grafana
+      restart: unless-stopped
+      ports:
+        - 3000:3000
+      environment:
+        GF_DATABASE_TYPE: postgres
+        GF_DATABASE_HOST: postgres-grafana
+        GF_DATABASE_NAME: DicussionForumGrafana
+        GF_DATABASE_USER: postgres
+        GF_SECURITY_ADMIN_PASSWORD: 7Bhq9Hvu45hM
+      volumes:
+        - grafana_data:/var/lib/grafana
+
+    postgres-grafana:
+      container_name: postgres-grafana
+      image: postgres:latest
+      expose:
+        - 5432
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: DicussionForumGrafana
+      volumes: 
+        - postgres-data:/var/lib/postgresql/data
+
 volumes:
-  postgres-data:    
+  postgres-data: {}
+  prometheus_data: {}
+  grafana_data: {}
+
 
