--- a/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
+++ b/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
@@ -152,6 +152,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Information\" />
+    <Folder Include="wwwroot\css\mooderator\" />
     <Folder Include="wwwroot\fonts\" />
   </ItemGroup>
 
