--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {}
 http {
 	server {
 		listen 1212;
-		server_name host.docker.internal:1212;
+		server_name localhost;
 
 		location /metrics {
 			deny all;
