--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,33 @@
 events {}
 http {
-	server {
-		listen 1212;
-		server_name localhost;
+	sendfile on;
 
-		location /metrics {
-			deny all;
-		}
+	server {
+		listen 80;
+
+		location / {
+            proxy_pass         http://web-mvc:80;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host;
+            proxy_cache_bypass  $http_upgrade;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+        }
 	}
+
+    server {
+        listen 443 ssl;
+        ssl_certificate /etc/nginx/cert.crt;
+        ssl_certificate_key /etc/nginx/cert.rsa;
+        location / {
+            proxy_pass         https://web-mvc:443;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+        }
+    }
 }
