--- a/prometheus.yml
+++ b/prometheus.yml
@@ -53,3 +53,14 @@ scrape_configs:
   - job_name: "prometheus"
     static_configs:
       - targets: ["host.docker.internal:9090"]
+  
+  - job_name: "mvc-nginx"
+    static_configs:
+      - targets: ["host.docker.internal:7315"]
+  
+  - job_name: 'mvcHttps-nginx'
+    scheme: https
+    tls_config:
+      insecure_skip_verify: true   
+    static_configs:
+      - targets: ["host.docker.internal:7316"]
