Update metrics restriction method

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,12 @@ events {}
 http {
 	sendfile on;
 
+    geo $allowed_ip {
+        default 0;  
+        127.0.0.0 1;
+        172.18.0.1 1;
+    }
+
 	server {
 		listen 80;
 
@@ -16,9 +22,9 @@ http {
         }
 
         location /metrics {
-            allow 127.0.0.0;
-            allow 172.18.0.1;
-            deny all;
+            if ($allowed_ip = 0) {
+                return 301 http://localhost:7315/not-found;
+            }
 
             proxy_pass         http://web-mvc:80/metrics;
             proxy_set_header   Upgrade $http_upgrade;
@@ -45,9 +51,9 @@ http {
         }
 
         location /metrics {
-            allow 127.0.0.0;
-            allow 172.18.0.1;
-            deny all;
+            if ($allowed_ip = 0) {
+                return 301 https://localhost:7316/not-found;
+            }
 
             proxy_pass         https://web-mvc:443/metrics;
             proxy_set_header   Upgrade $http_upgrade;
