--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -324,6 +324,7 @@ services:
     nginx: 
       image: nginx:latest
       container_name: nginx
+      restart: unless-stopped
       volumes:
         - ./nginx/nginx.conf:/etc/nginx/nginx.conf
         - ./nginx/cert.crt:/etc/nginx/cert.crt
