--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
          - nginx
          - grafana
          - prometheus
+         - rabbitmq
        volumes:
          - ${APPDATA}/Microsoft/UserSecrets/:/root/.microsoft/usersecrets
          - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https/
