Add production settings

--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Production.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Production.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "Kestrel:Certificates:Development:Password": "08c8a485-4361-4e1b-a3aa-a6cb0bdd9cc9",
+  "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=RegisterMicroservice",
+  "Database:HangfireConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=Hangfire",
+  "Email:CompanyName": "Forumium",
+  "Email:UserName": "11aaaaqa@gmail.com",
+  "Email:Smtp": "smtp.gmail.com",
+  "Email:Port": "465",
+  "Email:Password": "ritj mtvd ywvw qret",
+  "Email:From": "11aaaaqa@gmail.com",
+  "RabbitMQ:User": "rmuser",
+  "RabbitMQ:Password": "rmpassword",
+  "RabbitMQ:HostName": "rabbitmq"
 }
