--- a/src/Microservices/Topic/TopicMicroservice.Api/appsettings.Production.json
+++ b/src/Microservices/Topic/TopicMicroservice.Api/appsettings.Production.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=TopicMicroservice",
+  "RabbitMQ:User": "rmuser",
+  "RabbitMQ:Password": "rmpassword",
+  "RabbitMQ:HostName": "rabbitmq"
 }
