--- a/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Production.json
+++ b/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Production.json
@@ -1,3 +1,12 @@
 {
-
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=BanHistoryMicroservice",
+  "RabbitMQ:User": "rmuser",
+  "RabbitMQ:Password": "rmpassword",
+  "RabbitMQ:HostName": "rabbitmq"
 }
