Update production appsettings file

--- a/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Production.json
+++ b/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=BanHistoryMicroservice",
-  "RabbitMQ:User": "rmuser",
-  "RabbitMQ:Password": "rmpassword",
-  "RabbitMQ:HostName": "rabbitmq"
+  "RabbitMQ:User": "gen_user",
+  "RabbitMQ:Password": "zPJaTQ1BIeY0cf",
+  "RabbitMQ:HostName": "103.74.93.48"
 }
