--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Production.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Production.json
@@ -15,7 +15,7 @@
   "Email:Port": "465",
   "Email:Password": "ritj mtvd ywvw qret",
   "Email:From": "11aaaaqa@gmail.com",
-  "RabbitMQ:User": "rmuser",
-  "RabbitMQ:Password": "rmpassword",
-  "RabbitMQ:HostName": "rabbitmq"
+  "RabbitMQ:User": "gen_user",
+  "RabbitMQ:Password": "zPJaTQ1BIeY0cf",
+  "RabbitMQ:HostName": "103.74.93.48"
 }
