--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,11 @@ services:
       build:
         context: .
         dockerfile: src/Gateway/Gateway.Api/Dockerfile
-      ports:
-        - "7422:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.gateway-api.entrypoints=websecure"
+        - "traefik.http.routers.gateway-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -39,8 +42,11 @@ services:
       build: 
         context: .
         dockerfile: src/Microservices/Register/RegisterMicroservice.Api/Dockerfile
-      ports:
-        - "2211:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.register-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.register-microservice-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -54,8 +60,11 @@ services:
       build:
         context: .
         dockerfile: src/Microservices/User/UserMicroservie.Api/Dockerfile
-      ports:
-        - "1122:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.user-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.user-microservice-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -69,8 +78,11 @@ services:
       build:
         context: .
         dockerfile: src/Microservices/Topic/TopicMicroservice.Api/Dockerfile
-      ports:
-        - "5365:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.topic-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.topic-microservice-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -84,8 +96,11 @@ services:
       build:
         context: .
         dockerfile: src/Microservices/Discussion/DiscussionMicroservice.Api/Dockerfile
-      ports: 
-        - "9054:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.discussion-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.discussion-microservice-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -99,8 +114,11 @@ services:
       build:
         context: .
         dockerfile: src/Microservices/Comment/CommentMicroservice.Api/Dockerfile
-      ports:
-        - "1045:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.comment-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.comment-microservice-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -114,8 +132,11 @@ services:
       build:
         context: .
         dockerfile: src/Microservices/Report/ReportMicroservice/Dockerfile
-      ports:
-        - "1218:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.report-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.report-microservice-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -129,8 +150,11 @@ services:
       build:
         context: .
         dockerfile: src/Microservices/BanHistory/BanHistoryMicroservice.Api/Dockerfile
-      ports:
-        - "2058:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.banhistory-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.banhistory-microservice-api.tls.certresolver=myresolver"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
@@ -144,8 +168,11 @@ services:
       build:
          context: .
          dockerfile: src/Microservices/Bookmark/BookmarkMicroservice.Api/Dockerfile
-      ports:
-         - "5592:8080"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.gateway-api.rule=Host(`forumium.site`)"
+        - "traefik.http.routers.bookmark-microservice-api.entrypoints=websecure"
+        - "traefik.http.routers.bookmark-microservice-api.tls.certresolver=myresolver"
       environment:
          - ASPNETCORE_ENVIRONMENT=Development
          - ASPNETCORE_URLS=http://+:8080
@@ -160,10 +187,10 @@ services:
       expose:
         - 5432
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: gen_user
+        POSTGRES_PASSWORD: GQvo37QnTm61n
         POSTGRES_DB: BookmarkMicroservice
-        POSTGRES_HOST: postgres-bookmark-microservice
+        POSTGRES_HOST: 176.124.212.94
       volumes: 
         - postgres-bookmark-data:/var/lib/postgresql/data
 
@@ -173,10 +200,10 @@ services:
       expose:
         - 5432
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: gen_user
+        POSTGRES_PASSWORD: GQvo37QnTm61n
         POSTGRES_DB: BanHistoryMicroservice
-        POSTGRES_HOST: postgres-banhistory-microservice
+        POSTGRES_HOST: 176.124.212.94
       volumes: 
         - postgres-banhistory-data:/var/lib/postgresql/data
 
@@ -186,10 +213,10 @@ services:
       expose:
         - 5432
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: gen_user
+        POSTGRES_PASSWORD: GQvo37QnTm61n
         POSTGRES_DB: ReportMicroservice
-        POSTGRES_HOST: postgres-report-microservice
+        POSTGRES_HOST: 176.124.212.94
       volumes: 
         - postgres-report-data:/var/lib/postgresql/data
 
@@ -199,10 +226,10 @@ services:
       expose:
         - 5432
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: gen_user
+        POSTGRES_PASSWORD: GQvo37QnTm61n
         POSTGRES_DB: CommentMicroservice
-        POSTGRES_HOST: postgres-comment-microservice
+        POSTGRES_HOST: 176.124.212.94
       volumes: 
         - postgres-comment-data:/var/lib/postgresql/data
 
@@ -212,10 +239,10 @@ services:
       expose:
         - 5432
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: gen_user
+        POSTGRES_PASSWORD: GQvo37QnTm61n
         POSTGRES_DB: DiscussionMicroservice
-        POSTGRES_HOST: postgres-discussion-microservice
+        POSTGRES_HOST: 176.124.212.94
       volumes: 
         - postgres-discussion-data:/var/lib/postgresql/data
 
@@ -225,10 +252,10 @@ services:
       expose:
         - 5432
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: gen_user
+        POSTGRES_PASSWORD: GQvo37QnTm61n
         POSTGRES_DB: TopicMicroservice
-        POSTGRES_HOST: postgres-topic-microservice
+        POSTGRES_HOST: 176.124.212.94
       volumes: 
         - postgres-topic-data:/var/lib/postgresql/data
 
@@ -238,10 +265,10 @@ services:
        expose:
         - 5432
        environment:
-         POSTGRES_USER: postgres
-         POSTGRES_PASSWORD: postgres
+         POSTGRES_USER: gen_user
+         POSTGRES_PASSWORD: GQvo37QnTm61n
          POSTGRES_DB: RegisterMicroservice
-         POSTGRES_HOST: postgres-register-microservice
+         POSTGRES_HOST: 176.124.212.94
        volumes: 
          - postgres-register-data:/var/lib/postgresql/data
 
@@ -251,10 +278,10 @@ services:
        expose:
         - 5432
        environment:
-         POSTGRES_USER: postgres
-         POSTGRES_PASSWORD: postgres
+         POSTGRES_USER: gen_user
+         POSTGRES_PASSWORD: GQvo37QnTm61n
          POSTGRES_DB: UserMicroservice
-         POSTGRES_HOST: postgres-user-microservice
+         POSTGRES_HOST: 176.124.212.94
        volumes: 
          - postgres-user-data:/var/lib/postgresql/data
 
@@ -264,10 +291,10 @@ services:
       expose:
         - 5432
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: gen_user
+        POSTGRES_PASSWORD: GQvo37QnTm61n
         POSTGRES_DB: Hangfire
-        POSTGRES_HOST: postgres-hangfire
+        POSTGRES_HOST: 176.124.212.94
       volumes: 
         - postgres-hangfire-data:/var/lib/postgresql/data
 
@@ -276,9 +303,11 @@ services:
         hostname: rabbitmq
         restart: always
         environment:
-            - RABBITMQ_DEFAULT_USER=rmuser
-            - RABBITMQ_DEFAULT_PASS=rmpassword
-            - RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS=-rabbit log_levels [{connection,error},{default,error}] disk_free_limit 2147483648
+            - RABBITMQ_HOST=103.74.93.48
+            - RABBITMQ_PORT=5672
+            - RABBITMQ_USERNAME=gen_user
+            - RABBITMQ_PASSWORD=zPJaTQ1BIeY0cf
+            - RABBITMQ_VHOST=default_vhost
         volumes:
             - ./rabbitmq:/var/lib/rabbitmq/mnesia
         ports:
@@ -332,6 +361,26 @@ services:
       ports:
         - 7315:80
         - 7316:443
+      
+    traefik:
+      image: traefik:latest
+      container_name: traefik
+      command:
+        - "--log.level=DEBUG"
+        - "--api.insecure=true"
+        - "--providers.docker=true"
+        - "--providers.docker.exposedbydefault=false"
+        - "--entryPoints.websecure.address=:443"
+        - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
+        - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory" 
+        - "--certificatesresolvers.myresolver.acme.email=11aaaaqa@gmail.com"
+        - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      ports:
+        - 443:443
+        - 8080:8080
+      volumes:
+        - "./letsencrypt:/letsencrypt"
+        - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
 volumes:
   postgres-bookmark-data: {}
