--- a/src/Web/Web.MVC/Web.MVC/appsettings.Production.json
+++ b/src/Web/Web.MVC/Web.MVC/appsettings.Production.json
@@ -13,8 +13,8 @@
   "Jwt:Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672",
   "Captcha:EncryptionKey": "d8a122a8-f84c-49bf-be94-fa97c4e79a8f",
   "Url": {
-    "HostName": "gateway-api",
-    "Protocol": "http",
-    "Port": "8080"
+    "HostName": "gateway.forumium.site",
+    "Protocol": "https",
+    "Port": "443"
   }
 }
