--- a/src/Gateway/Gateway.Api/appsettings.Production.json
+++ b/src/Gateway/Gateway.Api/appsettings.Production.json
@@ -1,3 +1,148 @@
 {
-
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Yarp": {
+    "Routes": {
+      "banhistory-route": {
+        "ClusterId": "banhistory-cluster",
+        "Match": {
+          "Path": "api/BanHistory/{**catch-all}"
+        }
+      },
+      "bookmark-route": {
+        "ClusterId": "bookmark-cluster",
+        "Match": {
+          "Path": "api/Bookmark/{**catch-all}"
+        }
+      },
+      "comment-route": {
+        "ClusterId": "comment-cluster",
+        "Match": {
+          "Path": "api/Comment/{**catch-all}"
+        }
+      },
+      "suggest-comment-route": {
+        "ClusterId": "comment-cluster",
+        "Match": {
+          "Path": "api/SuggestComment/{**catch-all}"
+        }
+      },
+      "discussion-route": {
+        "ClusterId": "discussion-cluster",
+        "Match": {
+          "Path": "api/Discussion/{**catch-all}"
+        }
+      },
+      "suggest-discussion-route": {
+        "ClusterId": "discussion-cluster",
+        "Match": {
+          "Path": "api/SuggestDiscussion/{**catch-all}"
+        }
+      },
+      "auth-route": {
+        "ClusterId": "register-cluster",
+        "Match": {
+          "Path": "api/Auth/{**catch-all}"
+        }
+      },
+      "token-route": {
+        "ClusterId": "register-cluster",
+        "Match": {
+          "Path": "api/Token/{**catch-all}"
+        }
+      },
+      "register-user-route": {
+        "ClusterId": "register-cluster",
+        "Match": {
+          "Path": "api/User/{**catch-all}"
+        }
+      },
+      "report-route": {
+        "ClusterId": "report-cluster",
+        "Match": {
+          "Path": "api/Report/{**catch-all}"
+        }
+      },
+      "topic-route": {
+        "ClusterId": "topic-cluster",
+        "Match": {
+          "Path": "api/Topic/{**catch-all}"
+        }
+      },
+      "suggest-topic-route": {
+        "ClusterId": "topic-cluster",
+        "Match": {
+          "Path": "api/SuggestTopic/{**catch-all}"
+        }
+      },
+      "user-route": {
+        "ClusterId": "user-cluster",
+        "Match": {
+          "Path": "api/profile/User/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "banhistory-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://banhistory.forumium.site"
+          }
+        }
+      },
+      "bookmark-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://bookmark.forumium.site"
+          }
+        }
+      },
+      "register-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://register.forumium.site"
+          }
+        }
+      },
+      "user-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://user.forumium.site"
+          }
+        }
+      },
+      "topic-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://topic.forumium.site"
+          }
+        }
+      },
+      "discussion-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://discussion.forumium.site"
+          }
+        }
+      },
+      "comment-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://comment.forumium.site"
+          }
+        }
+      },
+      "report-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://report.forumium.site"
+          }
+        }
+      }
+    }
+  }
 }
